# Formula-Tron

./: README.md
Formula-Tron/formula_tron/: package.xml  setup.cfg  setup.py
Formula-Tron/formula_tron/formula_tron/: __init__.py  config.py  control_gui.py  expo_welcome_overlay.py  telemetry_window.py  vision_controller.py
Formula-Tron/formula_tron/formula_tron/utils/: __init__.py  base_controller.py  controller_registry.py  lane_detection.py  lap_timer.py  mode_config.py  mpc_controller.py  pd_controller.py  safety.py  telemetry.py  telemetry_logger.py  track_detection.py  vehicle_model.py
Formula-Tron/formula_tron/launch/: bringup.launch.py  drivers.launch.py
Formula-Tron/formula_tron/test/: README.md  __init__.py  conftest.py  test_auto_calibrate.py
Formula-Tron/formula_tron/test/fixtures/: __init__.py  mock_frames.py  mock_ros.py
Formula-Tron/formula_tron/test/integration/: __init__.py  test_control_gui_node.py  test_topic_flow.py  test_vision_controller_node.py
Formula-Tron/formula_tron/test/launch/: __init__.py  test_bringup_launch.py  test_build.py  test_camera_driver.py  test_camera_topic_detection.py  test_dependencies.py  test_end_to_end.py  test_environment.py  test_imports.py  test_line_endings.py  test_permissions.py  test_run_script.py  test_vesc_driver.py  test_vision_controller_launch.py  test_workspace.py
Formula-Tron/formula_tron/test/system/: __init__.py  test_full_system.py
Formula-Tron/formula_tron/test/unit/: __init__.py  test_config.py  test_control_math.py  test_controller_interface.py  test_expo_mode.py  test_lane_detection.py  (+6 more)
(+11 files in other folders)
